<?xml version="1.0"?>
<package format="2">
  <name>dcn_octomap</name>
  <version>0.0.0</version>
  <description>Octomap Test utils</description>
  <maintainer email="d.cardenas.nl@gmail.com">Daniel Cardenas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
